<resources>
    <string name="app_name">News App</string>
    <string name="no_name">"there is no Name"</string>
    <string name="no_connection">no connection error message</string>
    <string name="no_article">No articles found</string>

    <string name="name_placeholder">Name of the article</string>
    <string name="title_placeholder">Long placeholder title that should wrap to more than 2 lines of text</string>
    <string name="date_placeholder">2017-05-27</string>
    <string name="time_placeholder">11:01:26</string>
    <string name="article_placeholder">Article</string>
    <string name="sectionName_placeholder">Global</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Article Settings</string>

    <!-- Strings For Search-By Preference [CHAR LIMIT=30] -->
    <string name="settings_search_by_label">Search By</string>
    <string name="settings_search_by_key" translatable="false">search_by</string>
    <string name="settings_search_by_default" translatable="false">@string/settings_search_by_football_value</string>

    <!-- Label for search-by football option [CHAR LIMIT=20] -->
    <string name="settings_search_by_football_label">Football</string>
    <string name="settings_search_by_football_value" translatable="false">football</string>

    <!-- Label for search-by news option [CHAR LIMIT=20] -->
    <string name="settings_search_by_news_label">News</string>
    <string name="settings_search_by_news_value" translatable="false">news</string>

    <!-- Label for search-by crime option [CHAR LIMIT=20] -->
    <string name="settings_search_by_crime_label">Crime</string>
    <string name="settings_search_by_crime_value" translatable="false">crime</string>


</resources>
